feat: add parcel

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                         <path d="M0 0H24V3H0V0ZM0 7.5H24V10.5H0V7.5ZM0 15H24V18H0V15Z" fill="white"/>
                     </svg>
                 </div>
-                <nav class="nav">
+                <nav class="nav"parcel>
                     <ul class="nav__list">
                         <li class="nav__item">
                             <a class="nav__link">Features</a>
