--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Raleway:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.scss">
     <title>Active-box</title>
 </head>
 <body>
     <!-- banner -->
     <section class="banner">
-        <div class="container">
+        <div class="banner__container">
             <div class="header">
                 <a href="#" class="link__logo" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="184" height="27" viewBox="0 0 184 27" fill="none">
