feat works block, fix features block

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,10 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a class="nav__link">Features</a>
+                        <a class="nav__link" href="#features">Features</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link">works</a>
+                        <a class="nav__link"  href="#works">works</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link">our team</a>
@@ -63,7 +63,7 @@
         </div>
     </section>
     <!-- features -->
-    <section class="features">
+    <section id="features" class="features">
         <div class="features__container">
             <div class="features__wrapper">
                 <div class="features__wrapper-svg">
@@ -139,6 +139,67 @@
                 <h2 class="features__title">Download for Free</h2>
                 <p class="features__text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.
                 </p>
+            </div>
+        </div>
+    </section>
+    <!-- works -->
+    <section id="works" class="works">
+        <div class="works__container">
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/1.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/2.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/3.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/4.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/5.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/6.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/7.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
+            </div>
+            <div class="works__wrapper-image">
+                <img class="works__image" src="images/8.jpg" alt="works">
+                <div class="works__wrapper-content">
+                    <h2 class="works__title">Project Name</h2>
+                    <p class="works__text">User Interface Design</p>
+                </div>
             </div>
         </div>
     </section>
