add transition, js, fix border works

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                         <a class="nav__link"  href="#works">works</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link">our team</a>
+                        <a class="nav__link" href="#our-team">our team</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link">testimonials</a>
@@ -204,7 +204,7 @@
         </div>
     </section>
     <!-- our-team -->
-    <section class="our-team">
+    <section id="our-team" class="our-team">
         <div class="our-team__container">
             <div class="our-team__info">
                 <div class="our-team__wrapper-image">
@@ -348,5 +348,9 @@
             </div>
         </div>
     </section>
+
+
+
+    <script src="script/script.js"></script>
 </body>
 </html>
