--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,10 @@
                 </svg>
             </a>
             <div class="header__burger">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 18" fill="none">
+                <div class="header__burger-item"></div>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 18" fill="none">
                     <path d="M0 0H24V3H0V0ZM0 7.5H24V10.5H0V7.5ZM0 15H24V18H0V15Z" fill="white"/>
-                </svg>
+                </svg> -->
             </div>
             <nav class="nav">
                 <ul class="nav__list">
