--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                         <a class="nav__link" href="#our-team">our team</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link">testimonials</a>
+                        <a class="nav__link" href="#testimonials">testimonials</a>
                     </li>
                     <li class="nav__item">
                         <a class="nav__link" href="#download">download</a>
@@ -314,7 +314,7 @@
         </div>
     </div>
     <!-- testimonials -->
-    <div class="testimonials">
+    <div id="testimonials" class="testimonials">
         <div class="testimonials__container">
             <div class="testimonials__wrapper-image">
                 <img class="testimonials__image" src="images/22a194351ef371c9fc2a9a9cbb38ac3c.jpg" alt="">
